docker-compose/templates/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.type: ClusterIP
    kompose.version: 1.35.0 (HEAD)
    kompose.volume.size: 5Gi
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.service.type: ClusterIP
        kompose.version: 1.35.0 (HEAD)
        kompose.volume.size: 5Gi
      labels:
        io.kompose.service: ollama
    spec:
      containers:
        - env:
            - name: OLLAMA_KEEP_ALIVE
              value: 24h
          image: ollama/ollama:0.5.11
          name: ollama
          ports:
            - containerPort: 11434
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-data
      restartPolicy: Always
      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama-data
