docker-compose/templates/opensearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.type: ClusterIP
    kompose.version: 1.35.0 (HEAD)
    kompose.volume.size: 1Gi
  labels:
    io.kompose.service: opensearch
  name: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: opensearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.service.type: ClusterIP
        kompose.version: 1.35.0 (HEAD)
        kompose.volume.size: 1Gi
      labels:
        io.kompose.service: opensearch
    spec:
      containers:
        - env:
            - name: DISABLE_INSTALL_DEMO_CONFIG
              value: "true"
            - name: DISABLE_SECURITY_PLUGIN
              value: "true"
            - name: HUGGINGFACE_EMBEDDING_MODEL_DEFAULT
              valueFrom:
                configMapKeyRef:
                  key: HUGGINGFACE_EMBEDDING_MODEL_DEFAULT
                  name: kubernetes-env
            - name: HUGGINGFACE_FINETUNED_EMBEDDING_MODEL
              valueFrom:
                configMapKeyRef:
                  key: HUGGINGFACE_FINETUNED_EMBEDDING_MODEL
                  name: kubernetes-env
            - name: OLLAMA_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: OLLAMA_BASE_URL
                  name: kubernetes-env
            - name: OLLAMA_MODEL_DEFAULT
              valueFrom:
                configMapKeyRef:
                  key: OLLAMA_MODEL_DEFAULT
                  name: kubernetes-env
            - name: OPENAI_API_KEY
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_API_KEY
                  name: kubernetes-env
            - name: GOOGLE_API_KEY
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_API_KEY
                  name: kubernetes-env
            - name: OPENSEARCH_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: OPENSEARCH_BASE_URL
                  name: kubernetes-env
            - name: OPENSEARCH_INDEX_PREFIX
              valueFrom:
                configMapKeyRef:
                  key: OPENSEARCH_INDEX_PREFIX
                  name: kubernetes-env
            - name: OPENSEARCH_JAVA_OPTS
              valueFrom:
                configMapKeyRef:
                  key: OPENSEARCH_JAVA_OPTS
                  name: kubernetes-env
            - name: PDF_PARSER_MODEL
              valueFrom:
                configMapKeyRef:
                  key: PDF_PARSER_MODEL
                  name: kubernetes-env
            - name: PREFER_OPENSEARCH
              valueFrom:
                configMapKeyRef:
                  key: PREFER_OPENSEARCH
                  name: kubernetes-env
            - name: SENTENCE_TRANSFORMERS_HOME
              valueFrom:
                configMapKeyRef:
                  key: SENTENCE_TRANSFORMERS_HOME
                  name: kubernetes-env
            - name: bootstrap.memory_lock
              value: "true"
            - name: discovery.type
              value: single-node
          image: opensearchproject/opensearch:2.19.0
          name: opensearch
          ports:
            - containerPort: 9200
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/opensearch/data
              name: opensearch-data
      restartPolicy: Always
      volumes:
        - name: opensearch-data
          persistentVolumeClaim:
            claimName: opensearch-data
