docker-compose/templates/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.type: ClusterIP
    kompose.version: 1.35.0 (HEAD)
    kompose.volume.size: 5Gi
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  ports:
    - name: "11434"
      port: 11434
      targetPort: 11434
  selector:
    io.kompose.service: ollama
  type: ClusterIP
