docker-compose/templates/ouragboros-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.expose: "true"
    kompose.version: 1.35.0 (HEAD)
    kompose.volume.size: 3Gi
    metallb.universe.tf/address-pool: sdf-services
  labels:
    io.kompose.service: ouragboros
  name: ouragboros
spec:
  ports:
    - name: "8501"
      port: 8501
      targetPort: 8501
  selector:
    io.kompose.service: ouragboros
